[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
cgmath = "0.18.0"
rand = "0.8.5"
sdl2 = { version = "0.35.2", default-features = true, features = ["gfx", "bundled"] }

[build-dependencies]
fs_extra = "1.3.0"

[profile.release]
opt-level = 3     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*